--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         p {
             font-size: 1em;
-            color: #001323;
+            color: #e8eaed;
         }
 
     </style>
@@ -133,6 +133,9 @@
     <h1>Rates of Unemployment in the US: 2001 &ndash; 2015</h1>
     <div id="map"></div>
     <div id="ui-controls">
+        <h3>Select Year with the Slider</h3>
+        <p>Once you have selected a year, click on the county to see the name and unemployment rate (highlighted in yellow). You can also zoom and pan the map to examine different regions of the US.</p>
+        <hr>
         <label><span class="min">2001</span><span class="max">2015</span>
             <input type="range" min = "2001", max= "2015",
                    value = "2001", step= "1", class="year-slider">
